# BoggleAttack

./: README.md  pyproject.toml
boggle/: utils.py
boggle/attacks/: main.py
boggle/attacks/helper/: playing.py  template.py
boggle/configs/: model_list.py  sentence.py
src/boggle/attacks/: main.py
src/boggle/attacks/helper/: schema.py  template.py
src/boggle/models/: openai_model.py
