[project]
name = "boggle"
version = "0.1.0"
description = "An mult-agents attack toy"
authors = [
    {name = "ansonwang"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
